syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "Messages/CommonTypes.proto";

option csharp_namespace = "GrpcServer.Api.Protos.Messages.TypeTests";

package grpc_server.api.protos.messages.type_tests;

message FloatTestDto {
    float float_field = 1;
    repeated float float_field_collection = 2;
    google.protobuf.FloatValue float_field_nullable = 3;
    ListOfFloat float_field_nullable_collection = 4;
}
